# web-scrape

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: error.rs  lib.rs
src/cache/: mod.rs  web_cache.rs
src/extract/: error.rs  extract.rs  extractor.rs  mod.rs  parser.rs  webpage.rs
src/extract/cache/: cache_extractor.rs  mod.rs
src/extract/rq/: mod.rs  reqwest_extractor.rs
src/scrape/: error.rs  mod.rs  scrape.rs  scrape_error.rs  scraper.rs  web_scraper.rs
src/source/: mod.rs  web_source.rs
