[package]
name = "web-scrape"
version = "0.10.0"
description = "This library aids in scraping data from the web."
readme = "README.md"
repository = "https://github.com/nikdeapen/web-scrape"
homepage = "https://github.com/nikdeapen/web-scrape"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
enc = { version = "0.19.0", features = ["base-64", "hex"] }
clerr = "0.9.0"
file-storage = "0.7.0"
web-url = "0.10.0"

bytes = "1.11.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
